crates/rome_cli/tests/snapshots/main_ci/ci_parse_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `ci.js`

```js
if

```

# Termination Message

```block
errors where emitted while running checks
```

# Emitted Messages

```block
ci.js:2:1 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `(` but instead the file ends
  
  × the file ends here
  
    ┌─ ci.js:2:1
    │
  2 │ 
    │ ^
  

```


